--- a/.gitignore
+++ b/.gitignore
@@ -227,3 +227,4 @@ terraform.rc
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
 
 notes.txt
+*/lambda
