--- a/Exercise_2/Makefile
+++ b/Exercise_2/Makefile
@@ -1,1 +1,24 @@
-../Exercise_1/Makefile
+init:
+	terraform init
+
+validate:
+	terraform validate
+
+fmt:
+	terraform fmt
+
+lint:
+	@echo "TFLint: https://github.com/terraform-linters/tflint"
+	tflint 
+
+plan: lint
+	terraform plan
+
+deploy: lint
+	terraform apply -auto-approve
+
+ls:
+	aws s3 ls `terraform output -raw lambda_bucket_name` --recursive
+
+clean:
+	terraform destroy -auto-approve
